--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 __pycache__/
-data/test/*
-data/train/*
+data/test/AIGCDetectionBenchMark/test
+data/test/Co-Spy-Bench/real_image_examples
+data/train/progan/train
+data/train/progan/val
+data/train/sd-v1.4/mscoco2017
+data/train/sd-v1.4/stable-diffusion-v1-4
