--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,5 @@ data/train/progan/train
 data/train/progan/val
 data/train/sd-v1_4/mscoco2017
 data/train/sd-v1_4/stable-diffusion-v1-4
-pretrained/progan/*.pth
-pretrained/sd-v1_4/*.pth
+pretrained/progan
+pretrained/sd-v1_4
