--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ __pycache__/
 ckpt/
 data/test/AIGCDetectionBenchMark/test
 data/test/Co-Spy-Bench/real_image_examples
+data/test/Co-Spy-Bench/synthetic
 data/train/progan/train
 data/train/progan/val
 data/train/sd-v1_4/mscoco2017
